# BTC_ETH_strat

./: .gitignore  CLAUDE.md  README.md
backend/back_api/: CLAUDE.md  pyproject.toml
backend/back_api/src/back_api/: config.py  jobs.py  main.py
backend/back_api/src/back_api/routers/: backtest.py  co_mov.py  compare.py  evaluation.py  markowitz.py  price_forecast.py  regime_detection.py  vol_eval.py
backend/back_api/src/back_api/schemas/: backtest.py  co_mov_req.py  compare.py  evaluation.py  markowitz.py  price_forecast.py  regime_detection.py  saved_run.py  vol_eval.py
backend/back_api/tests/: conftest.py  test_backtest_helpers.py  test_backtest_router.py  test_evaluation_router.py  test_jobs.py
backend/core/: pyproject.toml
backend/core/src/core/: events.py
backend/core/src/core/backtest/: CLAUDE.md
backend/core/src/core/backtest/data/: __init__.py  loader.py
backend/core/src/core/backtest/engine/: __init__.py  runner.py
backend/core/src/core/backtest/metrics/: __init__.py  perf.py
backend/core/src/core/evaluation/: CLAUDE.md  __init__.py
backend/core/src/core/evaluation/metrics/: __init__.py  risk.py  vol.py
backend/core/src/core/evaluation/reports/: __init__.py  compare.py
backend/core/src/core/evaluation/validation/: __init__.py  splitter.py
backend/core/src/core/models/co_mov/: CLAUDE.md  base.py
backend/core/src/core/models/covariance/: __init__.py  base.py  bekk_cov.py  diagonal.py  rolling.py
backend/core/src/core/models/expected_returns/: __init__.py  base.py  rolling_mean.py  signal.py
backend/core/src/core/strats/: CLAUDE.md  base.py
backend/core/tests/backtest/: test_loader.py  test_metrics.py  test_runner.py
backend/core/tests/evaluation/: test_compare.py  test_risk_metrics.py  test_splitter.py  test_vol_metrics.py
backend/core/tests/models/co_mov/: test_bekk.py  test_copula.py  test_dcc.py  test_es_cavar.py
backend/core/tests/models/covariance/: test_bekk_cov.py  test_diagonal_cov.py  test_rolling_cov.py
backend/core/tests/models/expected_returns/: test_rolling_mean_returns.py  test_signal_expected_returns.py
backend/core/tests/strats/markowitz/: test_markowitz_strategy.py  test_optimizer.py
backend/core/tests/strats/mean_reversion/: test_mean_reversion_strategy.py
backend/core/tests/strats/momentum/: test_momentum_strategy.py
backend/core/tests/strats/orchestrator/: test_orchestrator.py  test_regime.py
backend/scripts/: pyproject.toml
backend/scripts/src/scripts/: __init__.py  extract_data.py
backend/scripts/src/scripts/data/: CONTEXT.md  downloader.py  loader.py  universe.py  websocket_client.py
(+93 files in other folders)
