[project]
name = "core"
version = "0.1.0"
description = ""
authors = [
    {name = "Etienne",email = "etienne.micheladj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "arch>=7.0",
    "filterpy>=1.4",
    "hmmlearn (>=0.3.3,<0.4.0)",
]

[tool.poetry]
packages = [{include = "core", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pyarrow (>=17.0)",
]
