[project]
name = "scripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Etienne",email = "etienne.micheladj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.0",
    "requests>=2.32",
    "core @ file:///C:/Users/etien/FinUni/divers/BTC_ETH_strat/backend/core",
]

[tool.poetry]
packages = [{include = "scripts", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
